--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@
     -webkit-border-radius: 0.5em;
 }
 
-p.blog-desc {
+p.blog-date {
     color: #999;
     margin: 0 0 10px 0;
     font-style: italic;
