--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,22 @@
     color: white;
 }
 
+#header-title h1 {
+    margin-bottom: 0;
+    font-size: 75px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: white;
+}
+
+#header-title h2 {
+    font-size: 24px;
+    font-weight: bold;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    color: white;
+}
+
 .post {
     border-bottom: #EBF2F6 1px solid;
     margin: 2rem auto;
@@ -60,6 +76,7 @@ h1, h2, h3, h4, h5, h6 {
     -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     -moz-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
+    color: #2E2E2E;
     line-height: 1.15em;
     margin: 0 0 0.4em 0;
     font-family: "Open Sans", sans-serif;
