--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ body {
     font-weight: bold;
     text-transform: uppercase;
     color: white;
+    text-shadow: 4px 4px #000000;
 }
 
 #header-title h2 {
@@ -69,6 +70,7 @@ body {
     letter-spacing: 5px;
     text-transform: uppercase;
     color: white;
+    text-shadow: 2px 2px #000000;
 }
 
 .post {
