--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
 
 #wrapper {
     background: #f8f8f8;
-    margin: 10px auto;
+    margin: 10px auto 2em;
     border-radius: 5px;
     padding-top: 2em;
     padding-left: 40px;
