--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,46 @@
 body {
-    background: #1F1F1E;
+    margin: 0 auto;
+    background: white;
 }
 
 #wrapper {
-    background: #f8f8f8;
+    background: white;
     margin: 10px auto 2em;
-    border-radius: 5px;
-    padding-top: 2em;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 2em;
-    width: 900px;
+    width: 980px;
+}
+
+#main {
+    float: left;
+    width: 650px;
+    background: white;
+    border-top-left-radius: 10px;
+    border-right: #DDDDDD 1px solid;
+}
+
+#sidebar {
+    float: right;
+    width: 300px;
+    padding: 10px;
+    background: white;
+    border-top-right-radius: 10px;
+}
+
+#sidebar-content {
+    margin: 10px;
+}
+
+#sidebar-header {
+    margin: 10px;
+    color: #999;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-family: "Open Sans", sans-serif;
+}
+
+#footer {
+    clear: both;
+    padding: 5px 10px;
+    background: #cc9;
 }
 
 #login {
@@ -45,8 +75,13 @@ body {
     -webkit-border-radius: 0.5em;
 }
 
+#header {
+    width: 100%;
+}
+
 #header-title {
-    margin: 20px auto;
+    padding: 20px;
+    background: #1F1F1E;
     background-size: cover;
     text-align: center;
     position: relative;
@@ -71,9 +106,20 @@ body {
     text-shadow: 2px 2px #000000;
 }
 
+#content-wrapper {
+    background: white;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
 .post {
-    border-bottom: #EBF2F6 1px solid;
-    margin: 2rem auto;
+    border-bottom: #DDDDDD 1px solid;
+    margin: 20px;
+}
+
+.post-title a {
+    color: #1F1F1E;
+    text-transform: uppercase;
 }
 
 p.blog-date {
