--- a/css/styles.css
+++ b/css/styles.css
@@ -110,8 +110,7 @@ body {
     font-weight: bold;
     letter-spacing: 5px;
     text-transform: uppercase;
-    color: white;
-    text-shadow: 2px 2px #000000;
+    color: rgba(46, 48, 58, 0.96);
 }
 
 #content-wrapper {
