--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,6 @@ body {
     margin: 20px;
 }
 
-
 .post-title a {
     font-size: 22px;
     color: #363842;
@@ -151,6 +150,11 @@ p.blog-date {
     -moz-border-radius: 100%;
     border-radius: 100%;
     box-shadow: #FFF 0 0 0 5px;
+}
+
+#single-post-wrapper {
+    width: 700px;
+    margin: 0 auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
