--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,9 @@
 body {
     margin: 0 auto;
-    background: white;
+    background: #f8f8f8;
 }
 
 #wrapper {
-    background: white;
     margin: 10px auto 2em;
     width: 980px;
 }
@@ -12,7 +11,6 @@ body {
 #main {
     float: left;
     width: 650px;
-    background: white;
     border-top-left-radius: 10px;
     border-right: #DDDDDD 1px solid;
 }
@@ -21,7 +19,6 @@ body {
     float: right;
     width: 300px;
     margin-top: 25px;
-    background: white;
     border-top-right-radius: 10px;
 }
 
@@ -117,7 +114,6 @@ body {
 }
 
 #content-wrapper {
-    background: white;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
