--- a/css/styles.css
+++ b/css/styles.css
@@ -97,24 +97,20 @@ footer {
 
 .banner {
     border-bottom: #DDDDDD 1px solid;
-    margin: 0 auto;
-}
-
-.inner-banner {
     padding: 2.040816%;
     background-size: cover;
     text-align: center;
     position: relative;
 }
 
-.inner-banner h1 {
+.banner h1 {
     margin: 0;
     font-size: 7.5em;
     font-weight: bold;
     color: rgba(46, 48, 58, 0.96);
 }
 
-.inner-banner h2 {
+.banner h2 {
     font-size: 2.4em;
     font-weight: bold;
     letter-spacing: 5px;
