--- a/css/styles.css
+++ b/css/styles.css
@@ -63,38 +63,6 @@ footer {
     color: rgba(46, 48, 58, 0.96);
 }
 
-#login {
-    border: 1px solid #AEAEAE;
-    margin: 100px auto 0;
-    padding: 0;
-    width: 300px;
-}
-
-#adminmenu {
-    padding-left: 0;
-}
-
-#adminmenu li {
-    float: left;
-    list-style: none;
-    margin-right: 20px;
-}
-
-.clear {
-    clear: both;
-}
-
-.error {
-    padding: 0.75em;
-    margin: 0.75em;
-    border: 1px solid #990000;
-    max-width: 400px;
-    color: #990000;
-    background-color: #FDF0EB;
-    -moz-border-radius: 0.5em;
-    -webkit-border-radius: 0.5em;
-}
-
 .banner {
     border-bottom: #DDDDDD 1px solid;
     background-size: cover;
@@ -178,14 +146,38 @@ a {
     font-family: "Open Sans", sans-serif;
 }
 
-form input {
-    border: 1px solid #999999;
-    border-bottom-color: #cccccc;
-    border-right-color: #cccccc;
-    padding: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.0em;
-    margin: 2px;
+/* =========================== Admin Section =========================== */
+
+#login {
+    border: 1px solid #AEAEAE;
+    margin: 100px auto 0;
+    padding: 0;
+    width: 300px;
+}
+
+#adminmenu {
+    padding-left: 0;
+}
+
+#adminmenu li {
+    float: left;
+    list-style: none;
+    margin-right: 20px;
+}
+
+.clear {
+    clear: both;
+}
+
+.error {
+    padding: 0.75em;
+    margin: 0.75em;
+    border: 1px solid #990000;
+    max-width: 400px;
+    color: #990000;
+    background-color: #FDF0EB;
+    -moz-border-radius: 0.5em;
+    -webkit-border-radius: 0.5em;
 }
 
 table {
@@ -218,4 +210,14 @@ table tr.alt td {
 table tr:hover {
     background-color: #F0F0F0;
     color: #000;
+}
+
+form input {
+    border: 1px solid #999999;
+    border-bottom-color: #cccccc;
+    border-right-color: #cccccc;
+    padding: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.0em;
+    margin: 2px;
 }
