--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,6 @@ footer {
 
 .banner {
     border-bottom: #DDDDDD 1px solid;
-    background-size: cover;
     text-align: center;
     position: relative;
 }
@@ -155,39 +154,28 @@ a {
     width: 300px;
 }
 
-#adminmenu {
-    padding-left: 0;
+.adminmenu {
+    background-color: #E5E5E5;
+    padding: .510205%;
 }
 
-#adminmenu li {
-    float: left;
+.adminmenu li {
+    display: inline;
     list-style: none;
     margin-right: 20px;
 }
 
-.clear {
-    clear: both;
-}
-
-.error {
-    padding: 0.75em;
-    margin: 0.75em;
-    border: 1px solid #990000;
-    max-width: 400px;
-    color: #990000;
-    background-color: #FDF0EB;
-    -moz-border-radius: 0.5em;
-    -webkit-border-radius: 0.5em;
+.admin {
+    margin: 1.020408% auto;
 }
 
 table {
-    width: 98%;
+    width: 100%;
     text-align: left;
-    border: 1px solid #DDDDDD;
+    border: 0.102041em solid #DDDDDD;
     font-size: 1.2em;
     color: #000;
     background: #fff;
-    margin-bottom: 10px;
 }
 
 table th {
@@ -220,4 +208,17 @@ form input {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.0em;
     margin: 2px;
+}
+
+/* Errors */
+
+.error {
+    padding: 0.75em;
+    margin: 0.75em;
+    border: 1px solid #990000;
+    max-width: 400px;
+    color: #990000;
+    background-color: #FDF0EB;
+    -moz-border-radius: 0.5em;
+    -webkit-border-radius: 0.5em;
 }
