--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-    width: 75%;
+    width: 70%;
     margin: 0 auto;
 }
 
@@ -221,4 +221,28 @@ form input {
     background-color: #FDF0EB;
     -moz-border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
+}
+
+/* =========================== Media Queries =========================== */
+
+@media screen and (max-width: 945px) {
+    .content {
+        margin: 0 auto;
+    }
+
+    main {
+        float: none;
+        border: none;
+        width: inherit;
+        border-bottom: #DDDDDD 1px solid;
+    }
+
+    .sidebar {
+        float: none;
+        width: inherit;
+    }
+
+    .pagination {
+        text-align: center;
+    }
 }
