--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,10 @@ a {
     font-family: "Open Sans", sans-serif;
 }
 
+img {
+    max-width: 100%;
+}
+
 /* =========================== Admin Section =========================== */
 
 #login {
